<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_wave_bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/splashLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/splashBondhon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bondhon"
            android:textColor="@color/red_accent"
            android:textSize="48sp"
            android:textStyle="bold"
            android:fontFamily="@font/hind_siliguri" />

        <TextView
            android:id="@+id/splashCollegeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/college_name_bn"
            android:textColor="@color/red_accent"
            android:textSize="18sp"
            android:fontFamily="@font/hind_siliguri" />

        <TextView
            android:id="@+id/splashCollegeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/college_location"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            android:fontFamily="@font/hind_siliguri" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/splashProgress"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:indeterminate="true" />

</RelativeLayout>
